[project]
name = "pesticide-bee-toxicity-prediction"
version = "1.0.0"
description = ""
authors = [
    {name = "Jakub Adamczyk (j-adamczyk)", email = "jadamczy@agh.edu.pl"},
    {name = "Jakub Poziemski (JPoziemski)", email = "poziejak@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "deepchem==2.8.0",
    "exmol==3.1.0",
    "grakel==0.1.10",
    "gdown==5.2.0",
    "joblib==1.4.2",
    "mol2vec==0.2.2",
    "networkit==11.0",
    "numpy==1.26.4",
    "ogb==1.3.6",
    "pandas==2.2.3",
    "scikit-fingerprints==1.15.0",
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "torch_geometric==2.4.0",
    "tqdm==4.67.1",
    "transformers==4.47.1"
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff"
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = ["E731"]  # lambda expressions
exclude = ["huggingmolecules/**"]
